# Windows_Coding

./: README.md
AI/: AI.py  AI2.0.py
Automation_Projects/: autosearch.py  img2pdfGui.py  rickRoll.py  subjects_folders.py
Gui/: guiCustomTkinter.py  guiImage.py
Java/: Client.md
Java/Intro_to_java/src/com/braching/: For.java  If_ex.java  Switch.java  WeekdaySwitchCase.java
Java/JavaFx/Client/: pom.xml
Java/JavaFx/GuiExample/: pom.xml
Java/JavaFx/comsControllers/: pom.xml
Java/JavaFx/css/: pom.xml
Java/JavaFx/csssetyling/: pom.xml
Java/JavaFx/guitest/: pom.xml
Java/JavaFx/imageview/: pom.xml
Java/JavaFx/scenebuilder/: pom.xml
Java/JavaFx/scenes/: pom.xml
Java/JavaFx/stages/: pom.xml
Java/JavaFx/switchScenes/: pom.xml
Java/OOP/src/: Main.java  User.java
Java/OOP_Constructors/src/: Main.java  User.java
Java/OOP_Generic_Lists/src/: Main.java
Java/OOP_M_Overriding/src/: Main.java  User.java
Java/SimpleCalculatorOOP/simplecalculatoroop-master/: .gitignore  readme.md
Java/SimpleCalculatorOOP/simplecalculatoroop-master/src/: Main.java
Python_Automation_Projects/: box_plot.py  downloadsDelete.py  pdfReader.py
Python_Automation_Projects/Gui/: guiTkinter.py  im2pdfguiCTk.py
cpp/Car/: CMakeLists.txt  ElectricCar.cpp  ElectricCar.h  car.cpp  car.h  main.cpp
cpp/Test/: CMakeLists.txt  main.cpp
cpp/Test/src/: Operation.cpp  Operation.h
cpp/Test/test/: test1.cpp
cpp/gtestexample/: main.cpp
cpp/gtestexample/Google_tests/: CMakeLists.txt
cpp/gtestexample/Test/: Test.cpp
cpp/person/: CMakeCache.txt  CMakeLists.txt
(+128 files in other folders)
